# Lilim

./: .gitignore  CLAUDE.md  Cargo.toml  MASTER_PLAN.md  README.md  deploy.sh  desc.txt  fix.sh  lilim_host_apply_and_test.sh  local_install.sh  scratch.rs
.github/workflows/: build.yml  release.yml
.vibecheck/: last-score.json  sync-queue.json
.vibecheck/flow/: config.json
.vibecheck/provenance/: attestations.db  edits.jsonl
config/: lilim-identity.json  lilim-responses.yaml  lilim.yaml  routing.toml
crates/lilim-inference/: Cargo.toml
crates/lilim-inference/src/: config.rs  downloader.rs  lib.rs  phi2.rs
crates/lilim-runtime/: Cargo.toml
crates/lilim-runtime/src/: brain.rs  config.rs  inference.rs  main.rs  proxy.rs  scheduler.rs  tools.rs
lilim_core/: free_router.py  memory_manager.py  memory_sqlite.py  prompt_enhancer.py  scheduler.py  server.py  tool_executor.py
lilim_desktop/: package-lock.json  package.json
lilim_desktop/src/: App.css  App.tsx  index.css  responses.ts
lilim_desktop/src-tauri/: Cargo.toml  tauri.conf.json
lilim_desktop/src-tauri/capabilities/: default.json
lilim_desktop/src-tauri/icons/: icon.icns
lilim_desktop/src-tauri/src/: lib.rs  main.rs
lilim_desktop/src/api/: lilim.ts
lilim_desktop/src/components/: ChatInterface.tsx  SettingsPanel.tsx
packaging/: build_appimage.sh  build_deb.sh
scratch/: verify_json.py
scratch_test/: Cargo.toml
scripts/: release_to_github.sh
systemd/system/: lilith-ai.service
tests/: __init__.py  test_memory.py  test_model_router.py  test_prompt_enhancer.py
