[package]
name = "lilim-inference"
version = "0.1.0"
edition = "2021"
description = "Lilim AI — Embedded Candle inference engine (Phi-2 local model)"
license = "AGPL-3.0"

[lib]
name = "lilim_inference"
path = "src/lib.rs"

[features]
default = ["cpu"]
cpu = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]

[dependencies]
# ── Candle ML framework ───────────────────────────────────────
candle-core = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main" }

# ── HuggingFace Hub downloader ────────────────────────────────
hf-hub = { version = "0.3", features = ["tokio"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }

# ── Tokenizer ─────────────────────────────────────────────────
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# ── Async runtime ─────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"

# ── Serialization ─────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Error handling ────────────────────────────────────────────
anyhow = "1"
thiserror = "1"

# ── Logging ───────────────────────────────────────────────────
tracing = "0.1"

# ── Filesystem / paths ────────────────────────────────────────
dirs = "5"
