[package]
name = "lilim-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lilim-runtime"
path = "src/main.rs"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
"once_cell" = "1.19"
