[package]
name = "lilim-runtime"
version = "0.3.0"
edition = "2021"
description = "Lilim AI Assistant — Rust backend runtime for Lilith Linux"
license = "AGPL-3.0"

[[bin]]
name = "lilim-runtime"
path = "src/main.rs"

[dependencies]
# Local inference engine (Candle Phi-2)
lilim-inference = { path = "../lilim-inference" }

# Bytes for SSE stream construction
bytes = "1.0"
# Web framework
axum = { version = "0.7" }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# HTTP client (to proxy to Python brain)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "blocking", "charset"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# YAML config parsing
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config / paths
dirs = "5.0"
once_cell = "1.19"

# Error handling
anyhow = "1.0"

# Date/time for audit logs
chrono = { version = "0.4", features = ["serde"] }

# Futures
futures-util = "0.3"

# Unix signal handling
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

